--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-    <meta name="description" content="Portfolio Web page built by Xuewen Yang">
-    <meta name="author" content="Xuewen Yang">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link type="text/css" href="css/styles.css" rel="stylesheet">
-    <link type="text/css" href="css/styles-home.css" rel="stylesheet" !important>
-    <link href="#" rel="icon">
-    <script src="#"></script>
-</head>
-<body>
-    <header>
-        <h1>Hello! I am Xuewen Yang &#128075;</h1>
-        <h3>Welcome to my site!</h3>
-        <input type="checkbox" id="side-menu">
-        <label class="hamburger" for="side-menu">
-            <span class="hamb-line"></span>
-            <span class="hamb-line"></span>
-            <span class="hamb-line"></span>
-        </label>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="nav-home">Home</a></li>
-                <li><a href="/pages/about.html" class="nav-about">About</a></li>
-                <li><a href="/pages/projects.html" class="nav-project">Projects</a></li>
-                <li><a href="/pages/contact.html" class="nav-contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <title>Portfolio</title>
+        <meta name="description"
+            content="Portfolio Web page built by Xuewen Yang">
+        <meta name="author" content="Xuewen Yang">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+            rel="stylesheet">
+        <link type="text/css" href="css/styles.css" rel="stylesheet">
+        <link type="text/css" href="css/styles-home.css" rel="stylesheet"
+            !important>
+        <link href="#" rel="icon">
+        <script src="#"></script>
+    </head>
+    <body>
+        <header>
+            <h1>Hello! I am Xuewen Yang &#128075;</h1>
+            <h3>Welcome to my site!</h3>
+            <input type="checkbox" id="side-menu">
+            <label class="hamburger" for="side-menu">
+                <span class="hamb-line"></span>
+                <span class="hamb-line"></span>
+                <span class="hamb-line"></span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="nav-home">Home</a></li>
+                    <li><a href="/pages/about.html" class="nav-about">About</a></li>
+                    <li><a href="/pages/projects.html" class="nav-project">Projects</a></li>
+                    <li><a href="/pages/contact.html" class="nav-contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-
-        <!-- <section class="intro"> -->
-            <!-- <img src="../media/headshot.JPG" alt="Headshot"> -->
+        <main>
             <picture class="headshot">
                 <source srcset="../media/headshot.webp" type="image/webp">
                 <source srcset="../media/headshot.jpg" type="image/jpeg">
@@ -57,7 +57,7 @@
                 <p>Moved to &#127745; San Francisco, CA in 2017.</p>
                 <p>Currently living in &#127965; San Diego, CA.</p>
             </section>
-            
+
             <section class="interests">
                 <h2>Interests &#128293;</h2>
                 <hr />
@@ -68,99 +68,17 @@
                     <li>Singing</li>
                 </ul>
             </section>
-            <!-- <table class="info-content">
-                <tr>
-                    <td><h3>Education</h3></td>
-                    <td>
-                        <p>University of California, San Diego</p>
-                        <p><i>9/2020 - 3/2024</i></p>
-                        <p>Major 1: B.S. in Math-Computer Science</p>
-                        <p>Major 2: B.S. in Data Science</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td><h3>Location</h3></td>
-                    <td>San Francisco, CA</td>
-                </tr>
-                <tr>
-                    <td><h3>Interests</h3></td>
-                    <td>
-                        <ol>
-                            <li>Listening to music</li>
-                            <li>Watching K-dramas and Chinese dramas</li>
-                            <li>Playing video games</li>
-                            <li>Singing</li>
-                        </ol>
-                    </td>
-                </tr>
-            </table> -->
+        </main>
 
-<!--                <aside>-->
-<!--                    <p>San Francisco, perched on the California peninsula, is a-->
-<!--                        culturally diverse and innovative city, renowned for its-->
-<!--                        iconic landmarks, tech industry influence, and vibrant-->
-<!--                        culture, set against a backdrop of steep hills and a-->
-<!--                        moderate climate.</p>-->
-<!--                </aside>-->
-        <!-- </section> -->
-        <!-- <picture>
-            <source media="(min-width:650px)" srcset="#">
-            <source media="(min-width:465px)" srcset="#">
-            <img src="#" alt="Background">
-        </picture>
-        <br>
-        <br> -->
-        <!-- <section class="videos" id="video1">
-           <video controls muted>
-               <source src="media/bowling.mov" type="video/mp4">
-               <p>Your browser doesn't support HTML5 video.</p>
-           </video>
-            <div class="video-description">
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
+        <footer>
+            <div id="footer-logo">
+                <a href="https://www.linkedin.com/in/xuewen-daphne-yang/"
+                    target="_blank"><img src="../media/linkedin-icon.png"
+                        alt="linkedin profile"></a>
+                <a href="https://github.com/daphneyyy" target="_blank"><img
+                        src="../media/github-icon.png" alt="github profile"></a>
             </div>
-        </section>
-        <section class="videos" id="video2">
-            <div class="video-description">
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-            </div>
-           <video controls muted>
-               <source src="media/ice_skating.mov" type="video/mp4" loading="lazy">
-               <p>Your browser doesn't support HTML5 video.</p>
-           </video>
-        </section>
-        <section class="videos" id="video3">
-            <video controls muted>
-                <source src="media/archery.mov" type="video/mp4">
-                <p>Your browser doesn't support HTML5 video.</p>
-            </video>
-            <div class="video-description">
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-                <p>some text some text some text some text some text</p>
-            </div>
-        </section> -->
-    </main>
-
-    <footer>
-        <div id="footer-logo">
-            <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile"></a>
-            <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile"></a>
-        </div>
-        <span>&copy; 2023 Xuewen Yang</span>
-    </footer>
-
-</body>
+            <span>&copy; 2023 Xuewen Yang</span>
+        </footer>
+    </body>
 </html>
