--- a/pages/about.html
+++ b/pages/about.html
@@ -28,28 +28,28 @@
         </header>
         <main>
             <section class="work">
-                <div class="work-content">
-                    <h2>Work Experience</h2>
-                    <ul>
-                        <li>
-                            <h3>UC San Diego</h3>
-                            <p><strong>Math Course Reader/Grader</strong></p>
-                            <p><i>Oct. 2023 - Present</i></p>
-                            <ul>
-                                <li>FA23: A MATH upper division course</li>
-                                <li>Grade homework and provide feedbacks for
-                                    200+ students.</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <h3>UC San Diego</h3>
-                            <p><strong>Advancement Data and Business
-                                    Intelligence Student Assistant</strong></p>
-                            <p><i>Sept. 2023 - Present</i></p>
-                            <p>Working on the embedded data and reporting team
+                <h2>Work Experience</h2>
+                <ul>
+                    <li>
+                        <h3>UC San Diego</h3>
+                        <p><strong>Math Course Reader/Grader</strong></p>
+                        <p><span class="timeline">Oct. 2023 - Present</span></p>
+                        <ul class="work-description">
+                            <li>FA23: A MATH upper division course</li>
+                            <li>Grade homework and provide feedbacks for
+                                200+ students.</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>UC San Diego</h3>
+                        <p><strong>Advancement Data and Business
+                                Intelligence Student Assistant</strong></p>
+                        <p><span class="timeline">Sept. 2023 - Present</span></p>
+                        <ul class="work-description">
+                            <li>Working on the embedded data and reporting team
                                 that supports the university's fundraising
-                                department.<br>
-                                Work on data maintenance tasks such as:
+                                department.</li>
+                            <li>Work on data maintenance tasks such as:
                                 <ul>
                                     <li>Managing a large number of constituent
                                         update requests and maintenance tasks.</li>
@@ -60,27 +60,30 @@
                                         processes .</li>
                                     <li>Other system and data tasks as assigned.</li>
                                 </ul>
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Walmart Global Technology</h3>
-                            <p><strong>Software Engineer II Intern</strong></p>
-                            <p><i>June 2023 - Aug. 2023</i></p>
-                            <p>Worked at the Measurement and Reporting team in
-                                Display Advertising.</p>
-                            <p>Tools: <strong>Python</strong>, <strong>SQL</strong>,
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Walmart Global Technology</h3>
+                        <p><strong>Software Engineer II Intern</strong></p>
+                        <p><span class="timeline">June 2023 - Aug. 2023</i></span></p>
+                        <ul class="work-description">
+                            <li>Worked at the Measurement and Reporting team in Display Advertising.</li>
+                            <li>Tools: <strong>Python</strong>, <strong>SQL</strong>,
                                 <strong>Google BigQuery</strong>, <strong>Java</strong>,
-                                and <strong>Tableau</strong></p>
-                        </li>
-                        <li>
-                            <h3>UC San Diego</h3>
-                            <p><strong>Advancement Data and Business
-                                    Intelligence Student Assistant</strong></p>
-                            <p><i>Nov. 2022 - June 2023</i></p>
-                            <p>Worked on the embedded data and reporting team
+                                and <strong>Tableau</strong></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>UC San Diego</h3>
+                        <p><strong>Advancement Data and Business
+                                Intelligence Student Assistant</strong></p>
+                        <p><span class="timeline">Nov. 2022 - June 2023</span></p>
+                        <ul class="work-description">
+                            <li>Worked on the embedded data and reporting team
                                 that supports the university's fundraising
-                                department.<br>
-                                Worked on data maintenance tasks such as:
+                                department.</li>
+                            <li>Worked on data maintenance tasks such as:
                                 <ul>
                                     <li>Managed a large number of constituent
                                         update requests and maintenance tasks.</li>
@@ -91,17 +94,19 @@
                                         processes .</li>
                                     <li>Other system and data tasks as assigned.</li>
                                 </ul>
-                            </p>
-                        </li>
-                        <li>
-                            <h3>UC San Diego</h3>
-                            <p><strong>Advancement Data and Business
-                                    Intelligence Student Assistant</strong></p>
-                            <p><i>Nov. 2022 - June 2023</i></p>
-                            <p>Worked on the embedded data and reporting team
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>UC San Diego</h3>
+                        <p><strong>Advancement Data and Business
+                                Intelligence Student Assistant</strong></p>
+                        <p><span class="timeline">2022 - June 2023</span></p>
+                        <ul class="work-description">
+                            <li>Worked on the embedded data and reporting team
                                 that supports the university's fundraising
-                                department.<br>
-                                Worked on data maintenance tasks such as:
+                                department.</li>
+                            <li>Worked on data maintenance tasks such as:
                                 <ul>
                                     <li>Managed a large number of constituent
                                         update requests and maintenance tasks.</li>
@@ -112,30 +117,30 @@
                                         processes .</li>
                                     <li>Other system and data tasks as assigned.</li>
                                 </ul>
-                            </p>
-                        </li>
-                        <li>
-                            <h3>UC San Diego</h3>
-                            <p><strong>Math Course Reader/Grader</strong></p>
-                            <p><i>Oct. 2022 - March 2023</i></p>
-                            <ul>
-                                <li>FA22/WI23: MATH 11 - Calculus-Based
-                                    Introductory Probability and Statistics</li>
-                                <li>Grade homework and provide feedbacks for
-                                    200+ students.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <hr />
-                <div class="resume">
-                    <p>Click the button below to download my resume.</p>
-                    <a href="../documents/Xuewen_Yang_Resume.pdf"
-                        target="Xuewen_Yang_Resume.pdf" class="download-button">Download
-                        Resume</a>
-                </div>
-                <hr />
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>UC San Diego</h3>
+                        <p><strong>Math Course Reader/Grader</strong></p>
+                        <p><span class="timeline">Oct. 2022 - Mar. 2023</span></p>
+                        <ul class="work-description">
+                            <li>FA22/WI23: MATH 11 - Calculus-Based
+                                Introductory Probability and Statistics</li>
+                            <li>Grade homework and provide feedbacks for
+                                200+ students.</li>
+                        </ul>
+                    </li>
+                </ul>
             </section>
+            <hr />
+            <section class="resume">
+                <p>Click the button below to download my resume.</p>
+                <a href="../documents/Xuewen_Yang_Resume.pdf"
+                    target="Xuewen_Yang_Resume.pdf" class="download-button">Download
+                    Resume</a>
+            </section>
+            <hr />
             <section class="skills">
                 <h2>Skills</h2>
                 <div class="skills-container">
