--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
                     <li>
                         <h3>UC San Diego</h3>
                         <p><strong>Math Course Reader/Grader</strong></p>
-                        <p><span class="timeline">Oct. 2023 - Present</span></p>
+                        <p>Oct. 2023 - Present</p>
                         <ul class="work-description">
                             <li>FA23: A MATH upper division course</li>
                             <li>Grade homework and provide feedbacks for
@@ -44,7 +44,7 @@
                         <h3>UC San Diego</h3>
                         <p><strong>Advancement Data and Business
                                 Intelligence Student Assistant</strong></p>
-                        <p><span class="timeline">Sept. 2023 - Present</span></p>
+                        <p>Sept. 2023 - Present</p>
                         <ul class="work-description">
                             <li>Working on the embedded data and reporting team
                                 that supports the university's fundraising
@@ -66,7 +66,7 @@
                     <li>
                         <h3>Walmart Global Technology</h3>
                         <p><strong>Software Engineer II Intern</strong></p>
-                        <p><span class="timeline">June 2023 - Aug. 2023</i></span></p>
+                        <p>June 2023 - Aug. 2023</i></p>
                         <ul class="work-description">
                             <li>Worked at the Measurement and Reporting team in Display Advertising.</li>
                             <li>Tools: <strong>Python</strong>, <strong>SQL</strong>,
@@ -78,7 +78,7 @@
                         <h3>UC San Diego</h3>
                         <p><strong>Advancement Data and Business
                                 Intelligence Student Assistant</strong></p>
-                        <p><span class="timeline">Nov. 2022 - June 2023</span></p>
+                        <p>Nov. 2022 - June 2023</p>
                         <ul class="work-description">
                             <li>Worked on the embedded data and reporting team
                                 that supports the university's fundraising
@@ -101,7 +101,7 @@
                         <h3>UC San Diego</h3>
                         <p><strong>Advancement Data and Business
                                 Intelligence Student Assistant</strong></p>
-                        <p><span class="timeline">2022 - June 2023</span></p>
+                        <p>2022 - June 2023</p>
                         <ul class="work-description">
                             <li>Worked on the embedded data and reporting team
                                 that supports the university's fundraising
@@ -123,7 +123,7 @@
                     <li>
                         <h3>UC San Diego</h3>
                         <p><strong>Math Course Reader/Grader</strong></p>
-                        <p><span class="timeline">Oct. 2022 - Mar. 2023</span></p>
+                        <p>Oct. 2022 - Mar. 2023</p>
                         <ul class="work-description">
                             <li>FA22/WI23: MATH 11 - Calculus-Based
                                 Introductory Probability and Statistics</li>
