--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,10 +39,11 @@
                     <a href="https://github.com/daphneyyy/dsc106-final-project">View Project</a>
                 </div>
                 <figure>
-                    <img src="../media/proj1.png" alt="Project 1 Image: Job Remoteness by Year">
-                    <!-- <img src="../media/proj1_b.png" alt="Project 1 Image"> -->
-                    <!-- <img src="../media/proj1_c.png" alt="Project 1 Image"> -->
-                    <figcaption>Job Remoteness by Year</figcaption>
+                    <picture>
+                        <source media="(min-width:1025px)" srcset="../media/proj1_c.png" type="image/png">
+                        <img src="../media/proj1.png" alt="Project 1 Image: Data Science Careers Insights">
+                    </picture>
+                    <figcaption>Data Science Careers Insights</figcaption>
                 </figure>
             </section>
             <section class="project">
